src/test/fun-test/semantic/MethodNotFound.java.err
Semantic error: Main.A.B.C.foo not found, line 13, pos 35
